# AI-Chatbot

./: README.md  environment.txt
ChatBot/: CMakeLists.txt  ChatBot.qmlproject  ChatBot.qmlproject.qtds  affairscheduler.py  filter.py  filter_model.m  qmlmodules  search.py  spam.csv  tempCodeRunnerFile.py  ui.py  ui.ui
ChatBot/Chatter/: README.md  test_chatter.py  train_chatter.py
ChatBot/Chatter/json/: knowledge.json  user_info.json
ChatBot/Chatter/model/: chatter_model.h5
ChatBot/Chatter/pkl/: types.pkl  words.pkl
ChatBot/content/: App.qml  Screen01.ui.qml
ChatBot/imports/: CMakeLists.txt
ChatBot/imports/ChatBot/: CMakeLists.txt  DirectoryFontLoader.qml  qmldir
ChatBot/imports/ChatBot/designer/: plugin.metainfo
ChatBot/src/: import_qml_plugins.h  search.py  ui.py
Chatter/: interface.py  requirements.txt  test_chatter.py  train_chatter.py
Chatter/json/: knowledge.json  user_info.json
Chatter/pkl/: types.pkl
